# iptv-downloader

./: .gitignore  LICENSE  README.md  iptv_downloader.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/iptv_downloader/: __init__.py  __main__.py  app.py  config.py  epg.py  models.py  playlist.py  recorder.py  ui.py  utils.py
tests/: __init__.py  conftest.py  test_integration.py  test_unit.py
